--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "leekyungho112 <epsoe@naver.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "prestart": "npx tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
   },
   "devDependencies": {
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   }
 }
